# Multi-Agent-Bitcoin-Trading

./: .gitignore  README.md  pyproject.toml
knowledge/: bitcoin_market_indicators.txt  market_analysis_framework.txt  trading_strategies.txt
outputs/: market_research.md  technical_analysis.md  trading_decision.md
outputs/2025-04-16/: market_research.md  technical_analysis.md  trading_decision.md
report_without_tools/: market_research.md  technical_analysis.md  trading_decision.md
src/bitcointrading/: __init__.py  crew.py  main.py
src/bitcointrading/config/: __init__.py  agents.yaml  parameters.yaml  tasks.yaml
src/bitcointrading/tools/: __init__.py
src/bitcointrading/tools/research_tools/: scraping.py
src/bitcointrading/tools/technical_tools/: indicators.py
src/bitcointrading/tools/trading_tools/: trading.py
