[project]
name = "bitcointrading"
version = "0.1.0"
description = "BitcoinTrading using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.36",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "numpy>=1.24.0"
]

[project.scripts]
bitcointrading = "bitcointrading.main:run"
run_crew = "bitcointrading.main:run"
train = "bitcointrading.main:train"
replay = "bitcointrading.main:replay"
test = "bitcointrading.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
